fix dialog margin on small screen

--- a/index.css
+++ b/index.css
@@ -300,7 +300,6 @@ code {
      
      dialog {
         padding: 0;
-        margin: 0;
         max-height: 100%;
         border: none;
         border-radius: 0;
